# voxpanel-controller

./: commons.py  config.py  ipc.py  main.py  piccolo_conf.py  pyproject.toml  rpc.py  rpc_client.py  setup_users.py
agents/: __init__.py  piccolo_app.py  tables.py
agents/piccolo_migrations/: agents_2026_06_22t11_40_12_594951.py
auth/: __init__.py  piccolo_app.py  scopes.py  tables.py
auth/piccolo_migrations/: auth_2026_06_10t15_46_02_727752.py
server/: __init__.py  agent_rpc.py  log_streaming.py  piccolo_app.py  tables.py
server/piccolo_migrations/: server_2026_06_11t10_01_09_713516.py  server_2026_06_11t10_03_36_951296.py  server_2026_06_11t17_46_42_836552.py  server_2026_06_12t11_20_07_115764.py
tests/: test_auth.py
