[project]
name = "control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "aiosqlite>=0.22.1",
    "black>=26.5.1",
    "fastapi>=0.136.3",
    "httpx2>=2.4.0",
    "piccolo-admin>=1.13.0",
    "piccolo[postgres]>=1.34.0",
    "pika>=1.4.1",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.48.0",
]
